--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,3 +1,7 @@
-<footer>
-    Page Footer
+<footer id="footer">
+
+    <h1>Hijabgirls@.com</h1>
+    <a href="/">Home</a>
+    <a href="/users/profile">Profile</a>
+
 </footer>
