--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,25 +1,27 @@
-<header>
-    Page Header
+<header id="header-container">
+    Codial
     <ul>
         <% if(locals.user) {%>
-        <li>
-            <a href="/users/profile">
+            <div class="sign-in-list">
+        <li >
+            <a href="/users/profile" class="anchor">
                 <%=user.name%>
             </a>
         </li>
-        <li>
-            <a href="/users/sign-out">Sign Out</a>
+        <li  >
+            <a href="/users/sign-out"  class="anchor">Sign Out</a>
         </li>
-
+</div>
         <%} else {%>
-            <li>
-            <a href="/users/sign-in">Sign In</a>
+            <div class="sign-in-list">
+            <li >
+            <a href="/users/sign-in" class="anchor">Sign In</a>
             </li>
 
-            <li>
-                <a href="/users/sign-up">Sign Up</a>
-                </li>
-
+            <li >
+                <a href="/users/sign-up" class="anchor">Sign Up</a>
+            </li>
+            </div>
          <% } %>
     </ul>
 </header>
