--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,14 @@
 
-
     <h1>
         This is Codial / <%=title %>
     </h1>
+<section id="feed-posts">   
+      <h4>Posts</h4>
+    <form action="/posts/create" id="new-post-form" method="POST">
+        <textarea name="content" cols="30" rows="3"  placeholder="Type Here...."></textarea>      
+        
+        <input type="submit" alue="POST"> 
+
+     </form>
+
+</section>
