--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,9 +6,27 @@
       <h4>Posts</h4>
     <form action="/posts/create" id="new-post-form" method="POST">
         <textarea name="content" cols="30" rows="3"  placeholder="Type Here...."></textarea>      
-        
         <input type="submit" alue="POST"> 
 
      </form>
+     
+     <div id="Pposts-list-container">
+
+        <ul>
+            <% for(post of posts){%>
+                <li>
+                    <p>
+                        <%= post.content %>
+                        <br>
+                        <small>
+                            <%= post.user.name %>
+                        </small>
+                    </p>
+                    
+                </li>
+            <%}%>
+        </ul>
+
+     </div>
 
 </section>
