check Authentication on creating post

--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,6 +1,6 @@
 <footer id="footer">
 
-    <h1>Hijabgirls@.com</h1>
+    <h1>Hijabigirls@.com</h1>
     <a href="/">Home</a>
     <a href="/users/profile">Profile</a>
 
