--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,16 +1,17 @@
 
     <h1>
-        This is Codial / <%=title %>
+        Codial / <%=title %>
     </h1>
 <section id="feed-posts">   
       <h4>Posts</h4>
+      <% if(locals.user) {%>
     <form action="/posts/create" id="new-post-form" method="POST">
         <textarea name="content" cols="30" rows="3"  placeholder="Type Here...."></textarea>      
-        <input type="submit" alue="POST"> 
-
+        <input type="submit" value="POST"> 
      </form>
+     <% } %>
      
-     <div id="Pposts-list-container">
+     <div id="posts-list-container">
 
         <ul>
             <% for(post of posts){%>
@@ -26,7 +27,5 @@
                 </li>
             <%}%>
         </ul>
-
      </div>
-
 </section>
