--- a/assets/SCSS/layout.scss
+++ b/assets/SCSS/layout.scss
@@ -1,8 +1,59 @@
 body{
-    margin: 0;
+    // margin: 0;
     
+    // background-image:linear-gradient(to right,rosybrown, rgba(0, 255, 255, 0.644));
+    // background-image: url(https://images.pexels.com/photos/245032/pexels-photo-245032.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
     #layout-main{
         height: 100%;
+        background-image: url(https://images.pexels.com/photos/245032/pexels-photo-245032.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+        overflow:scroll;
+
+        //Heading style
+       #page-heading{
+        text-align: center;
+        color: white;
+        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        // background-color:rgba(255, 127, 80, 0.863);
+         height: 52px;
+        margin-top: 1px;
+        // box-shadow:10px 8px  10px rosybrown ;
+       }
+
+       //Section Style
+       #feed-posts{
+        margin-top: -5px;
+        
+        //   background-image: url(https://images.pexels.com/photos/245032/pexels-photo-245032.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+          
+        #post-heading{
+            color: white;
+            font-size: 30px;
+            font-weight: 700;
+            margin-bottom: 7px;
+            margin-left: 7px;
+        }
+
+            #form-style{
+                margin-left: 7px;
+                // overflow: hidden;
+                .text{
+                    border: 1px rgba(0, 0, 0, 0.493) solid;
+                    background-color: bisque;
+                    padding: 4px;
+                }
+                .sbmt{
+                    background-color: rosybrown;
+                    color: white;
+                    border-radius: 8px;
+                    padding: 4px;
+                    border: 1px gray solid;
+                    box-shadow: 4px 4px 4px;
+                }
+            }
+            
+        
+
     }
 
+}
 }
