--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,22 +1,28 @@
 
-    <h1>
+    <h1 id="page-heading">
         Codial <%=title %>
     </h1>
-<section id="feed-posts">   
-      <h4>Posts</h4>
+<section id="feed-posts" >   
+      <div id="post-heading">Posts</div>
       <% if(locals.user) {%>
-    <form action="/posts/create" id="new-post-form" method="POST">
-        <textarea name="content" cols="30" rows="3"  placeholder="Type Here...." required></textarea>      
-        <input type="submit" value="POST"> 
+        <div id="form-style">
+    <form action="/posts/create" id="new-post-form" method="POST" >
+        <textarea name="content" cols="30" rows="3"  placeholder="Type Here...." required class="text"></textarea>      
+        <input type="submit" value="POST" class="sbmt"> 
      </form>
      <% } %>
      
      <div id="posts-list-container">
-
     <ul>
       <% for(post of posts){%>
         <li>
         <p>
+          <% if(locals.user && locals.user.id==post.user.id){%>
+          <small>
+            <a href="/posts/destroy/<%=post.id%>">Delete</a>
+          </small>
+            
+          <%}%>
            <%= post.content %>
              <br>
               <small>
@@ -25,10 +31,10 @@
         </p>
             <div class="post-comments">
                 <% if(locals.user){ %>
-                 <form action="/comments/create" method="POST">
-                 <input type="text" name="content" placeholder="Type here to add comment.."> 
+                 <form action="/comments/create" method="POST" >
+                 <input type="text" name="content" placeholder="Type here to add comment.." class="text"> 
                  <input type="hidden" name="post" value="<%=post._id%>">   
-                 <input type="submit" value="Add Comment">
+                 <input type="submit" value="Add Comment" class="sbmt">
                  </form>   
 
              <% } %>
@@ -53,4 +59,6 @@
         <%}%>
         </ul>
      </div>
+
+    </div>
 </section>
