--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -4,7 +4,7 @@
         <% if(locals.user) {%>
             <div class="sign-in-list">
         <li >
-            <a href="/users/profile" class="anchor">
+            <a href="/users/profile/<%=u.id%>" class="anchor">
                 <%=user.name%>
             </a>
         </li>
