--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,71 +1,36 @@
-     <div class="main-container">
-    <h1 id="page-heading">
-        Codial <%=title %>
-    </h1>
-<section id="feed-posts" >   
-      <div id="post-heading">Posts</div>
+<link rel="stylesheet" href="/css/home.css">
+
+<div id="home-container">
+    <section id="feed-posts" >   
+      <div class="heading">Posts</div>
       <% if(locals.user) {%>
-        <div id="form-style">
+
+        
     <form action="/posts/create" id="new-post-form" method="POST" >
         <textarea name="content" cols="30" rows="3"  placeholder="Type Here...." required class="text"></textarea>      
         <input type="submit" value="POST" class="sbmt"> 
      </form>
+       
      <% } %>
      
      <div id="posts-list-container">
     <ul>
       <% for(post of posts){%>
-        <li>
-        <p>
-          <% if(locals.user && locals.user.id==post.user.id){%>
-          <small>
-            <a href="/posts/destroy/<%=post.id%>">Delete</a>
-          </small>
-            
-          <%}%>
-           <%= post.content %>
-             <br>
-              <small>
-              <%= post.user.name %>
-             </small>
-        </p>
-            <div class="post-comments">
-                <% if(locals.user){ %>
-                 <form action="/comments/create" method="POST" >
-                 <input type="text" name="content" placeholder="Type here to add comment.." class="text"> 
-                 <input type="hidden" name="post" value="<%=post._id%>">   
-                 <input type="submit" value="Add Comment" class="sbmt">
-                 </form>   
 
-             <% } %>
-             <div class="post-comments-list">
-                <ul id="post-comments-<%= post._id%>">
-                <% for (comment of post.comments){%> 
-                    <p>
-                      <% if(locals.user && locals.user.id==comment.user.id){%>
-                        <small>
-                          <a href="/comments/destroy/<%=comment.id%>">Delete</a>
-                        </small>
-                          
-                        <%}%>
-                        <%= comment.content%>
-                        <br>
-                      <small>
-                        <%=comment.user.name%>
-                      </small>  
-                    </p>
+        <%- include('_post') -%>
 
-                    <%}%>
-                </ul>
-
-             </div>
-
-            </div>
-         </li>
         <%}%>
         </ul>
-     </div>
-
     </div>
 </section>
-     </div>
+
+<section id="user-friends">
+  <div class="heading">Friends</div>
+  <% for (u of all_users){%>
+    <p>
+      <a href="/users/profile/<%=u.id%>"><%=u.name%></a>
+    </p>
+    
+    <% } %>
+</section>
+ </div>
