converting to AJAX

--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,8 +1,8 @@
-<li>
+<li id="post-<%=post._id%>">
     <p>
       <% if(locals.user && locals.user.id==post.user.id){%>
       <small>
-        <a href="/posts/destroy/<%=post.id%>">Delete</a>
+        <a  class="delete-post-button" href="/posts/destroy/<%=post.id%>">Delete</a>
       </small>
         
       <%}%>
@@ -19,7 +19,7 @@
              <input type="hidden" name="post" value="<%=post._id%>">   
              <input type="submit" value="Add Comment" class="sbmt">
              </form>   
-            </div>
+            
          <% } %>
          <div class="post-comments-list">
             <ul id="post-comments-<%= post._id%>">
@@ -31,4 +31,5 @@
             </ul>
 
          </div>
+        </div>
      </li>
