--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,7 +5,7 @@
     </title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 <link rel="stylesheet" href="/css/header.css">
 <link rel="stylesheet" href="/css/layout.css">
 <link rel="stylesheet" href="/css/footer.css">
@@ -28,7 +28,7 @@
 <%- script %>
 
 <script>
-<% if(flash.success && flash.success.length>0) {%> 
+<% if(flash.success && flash.success.length>0) { %> 
    new Noty({
       theme: 'relax',
       text: "<%=flash.success%>",
