--- a/views/_comment.ejs
+++ b/views/_comment.ejs
@@ -1,11 +1,11 @@
-<li>
+<li id="comment-<%=comment._id%>">
     <p>
-        <% if(locals.user && locals.user.id==comment.user.id){%>
+        <% if(locals.user && locals.user.id==comment.user.id){ %>
           <small>
-            <a href="/comments/destroy/<%=comment.id%>">Delete</a>
+            <a class="delete-comment-button"href="/comments/destroy/<%=comment.id%>">Delete</a>
           </small>
             
-          <%}%>
+          <% } %>
           <%= comment.content%>
           <br>
         <small>
