--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,19 +1,23 @@
 <header id="header-container">
-    Codial
+    <div id="heading" >
+        <a href="/">Codial
+            </a>
+        </div>
+    <div class="auto-links">
     <ul>
         <% if(locals.user) {%>
-            <div class="sign-in-list">
+            
         <li >
-            <a href="/users/profile/<%=u.id%>" class="anchor">
+            <a href="/users/profile" class="anchor">
                 <%=user.name%>
             </a>
         </li>
         <li  >
             <a href="/users/sign-out"  class="anchor">Sign Out</a>
         </li>
-</div>
+
         <%} else {%>
-            <div class="sign-in-list">
+        
             <li >
             <a href="/users/sign-in" class="anchor">Sign In</a>
             </li>
@@ -21,7 +25,9 @@
             <li >
                 <a href="/users/sign-up" class="anchor">Sign Up</a>
             </li>
-            </div>
+           
          <% } %>
     </ul>
+</div>
+    
 </header>
