--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -14,8 +14,8 @@
     </p>
         <div class="post-comments">
             <% if(locals.user){ %>
-             <form action="/comments/create" method="POST" >
-             <input type="text" name="content" placeholder="Type here to add comment.." class="text"> 
+             <form id="post-<%=post._id%>-comments-form" action="/comments/create"  method="POST" >
+             <input type="text" name="content" placeholder="Type here to add comment.." class="text" required> 
              <input type="hidden" name="post" value="<%=post._id%>">   
              <input type="submit" value="Add Comment" class="sbmt">
              </form>   
@@ -33,3 +33,4 @@
          </div>
         </div>
      </li>
+     
