--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,5 +34,7 @@
     <% } %>
 </section>
  </div>
-
+<!-- importing this script for creating the comments -->
+<script src="/js/home_comments.js"></script>
  <script src="/js/home_posts.js"></script>
+ 
