--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,7 +1,5 @@
 <link rel="stylesheet" href="/css/user_profile.css">
-   <h1>
-    Codial / Profile Page
-   </h1>
+   <img src="<%=user.avatar %>" alt="<%=user.name%>" width="100">
 
 
   <% if(user.id==profile_user.id){%>
@@ -9,7 +7,7 @@
     <form action="/users/update/<%=profile_user.id%>" enctype="multipart/form-data" method="POST">
       <input type="text" name="name" placeholder="Your Name" value="<%=profile_user.name%>" required>
       <input type="email" name="email" placeholder="Your Email" value="<%=profile_user.email%>" required >
-      <input type="file" name="avtar" placeholder="Profile Picture">
+      <input type="file" name="avatar" placeholder="Profile Picture">
       <input type="submit" value="Update">
     </form>
 
