--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -8,7 +8,7 @@
         <% if(locals.user) {%>
             
         <li >
-            <a href="/users/profile" class="anchor">
+            <a href="/users/profile/<%= user.id %>"" class="anchor">
                 <%=user.name%>
             </a>
         </li>
@@ -19,7 +19,7 @@
         <%} else {%>
         
             <li >
-            <a href="/users/sign-in" class="anchor">Sign In</a>
+            <a href="/users/sign-in/user" class="anchor">Sign In</a>
             </li>
 
             <li >
