--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -19,7 +19,7 @@
         <%} else {%>
         
             <li >
-            <a href="/users/sign-in/user" class="anchor">Sign In</a>
+            <a href="/users/sign-in" class="anchor">Sign In</a>
             </li>
 
             <li >
