--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -2,6 +2,5 @@
 
     <h1>Hijabigirls@.com</h1>
     <a href="/">Home</a>
-    <a href="/users/profile/<%= user.id %>">Profile</a>
-
+    <a href="/users/profile">Profile</a>
 </footer>
