--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -3,8 +3,13 @@
 <form action="/users/create-session" method="POST">
 
     <input type="email" name="email" placeholder="Email" required>
-    
+    <br>
+    <br>
     <input type="password" name="password" placeholder="password" required>
+    <br>
+    <a href="./mailers/reset_password.ejs">Forget Password</a>
+    <br>
+    <br>
     <input type="submit"  value="Sign In">
 
 </form>
