--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/css/home.css">
+<link rel="stylesheet" href="/css/chat_box.css">
 
 <div id="home-container">
     <section id="feed-posts" >   
@@ -33,6 +34,7 @@
     
     <% } %>
  </section>
+ <%- include('_chat_box') -%> 
  </div>
 <!-- importing this script for creating the comments -->
 <script src="/js/home_comments.js"></script>
@@ -45,4 +47,13 @@
     let toggleLike = new ToggleLike(self);
    });
  </script>
- 
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.4/socket.io.js" ></script>
+
+ <script src="/js/chat_engine.js"></script>
+ <% if(locals.user) {%> 
+ <script>
+  new ChatEngine('user-chat-box','<%= locals.user.email %>');
+ </script>
+
+ <%}%>
