devlopment and production

--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -2,5 +2,7 @@
 
     <h1>Hijabigirls@.com</h1>
     <a href="/">Home</a>
-    <a href="/users/profile">Profile</a>
+    <% if(locals.user) {%>
+    <a href="/users/profile/<%=locals.user.id%>">Profile</a>
+     <%}%>
 </footer>
