--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -8,7 +8,7 @@
         <% if(locals.user) {%>
             
         <li >
-            <a href="/users/profile/<%= user.id %>"" class="anchor">
+            <a href="/users/profile/<%= user.id %>" class="anchor">
                 <%=user.name%>
             </a>
         </li>
