--- a/assets/SCSS/user_profile.scss
+++ b/assets/SCSS/user_profile.scss
@@ -1,4 +1,5 @@
-body{
+#userprofile-container{
+    height: 100%;
     background-image: url('../images/mac.jpg');
     background-repeat: no-repeat;
     // background-size: contain;
