--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/css/user_profile.css">
+<div id="userprofile-container">
    <img src="<%=user.avatar %>" alt="<%=user.name%>" width="100">
 
 
@@ -24,3 +25,5 @@
   </a>
 
    <%}%>
+
+</div>
