--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,8 @@
-<link rel="stylesheet" href="/css/home.css">
-<link rel="stylesheet" href="/css/chat_box.css">
+<link rel="stylesheet" href="<%=assetPath('css/home.css')%>">
+<link rel="stylesheet" href="<%= assetPath('css/chat_box.css')%>">
 
 <div id="home-container">
+  
     <section id="feed-posts" >   
       <div class="heading">Posts</div>
       <% if(locals.user) {%>
@@ -36,12 +37,13 @@
  </section>
  
  <%- include('_chat_box') -%> 
+
  </div>
 <!-- importing this script for creating the comments -->
-<script src="/js/home_comments.js"></script>
- <script src="/js/home_posts.js"></script>
+<script src="<%= assetPath('js/home_comments.js')%>"></script>
+ <script src="<%= assetPath('js/home_posts.js')%>"></script>
 
- <script src="js/toggle_likes.js"></script>
+ <script src="<%=('js/toggle_likes.js')%>"></script>
  <script>
    $('.toggle-like-button').each(function(){
     let self = this;
@@ -51,7 +53,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.4/socket.io.js" ></script>
 
- <script src="/js/chat_engine.js"></script>
+ <script src="<%= assetPath('js/chat_engine.js')%>"></script>
  <% if(locals.user) {%> 
  <script>
   new ChatEngine('user-chat-box', '<%= locals.user.email %>');
