--- a/assets/SCSS/layout.scss
+++ b/assets/SCSS/layout.scss
@@ -1,9 +1,10 @@
 body{
-    // margin: 0;
-    
+     margin: 0;
+    // text-align: center;
     
     #layout-main{
         height: 100%;
+        overflow: auto;
 
 }
 
