--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,9 +9,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 
-<link rel="stylesheet" href="/css/header.css">
-<link rel="stylesheet" href="/css/layout.css">
-<link rel="stylesheet" href="/css/footer.css">
+
+<link rel="stylesheet" href="<%=assetPath('css/layout.css') %>">
+<link rel="stylesheet" href="<%= assetPath('css/header.css')%>">
+<link rel="stylesheet" href="<%=assetPath('css/footer.css')%>">
 
 <%- style %>
 
@@ -22,7 +23,7 @@
    
    <main id="layout-main">
 
-    <%- body%>
+    <%- body %>
 
    </main>
 
