--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -14,7 +14,7 @@
        <br>
       <small>
        <%if(locals.user){%>
-        <a class="toggle-post-button" data-likes="<%=post.likes.length %>"
+        <a class="toggle-like-button" data-likes="<%=post.likes.length %>"
           href="/likes/toggle/?id=<%=post._id%>&type=Post">
           <%=post.likes.length %> Likes
         </a>
