--- a/views/home.ejs
+++ b/views/home.ejs
@@ -43,7 +43,7 @@
 <script src="<%= assetPath('js/home_comments.js')%>"></script>
  <script src="<%= assetPath('js/home_posts.js')%>"></script>
 
- <script src="<%=('js/toggle_likes.js')%>"></script>
+ <script src="<%=assetPath('js/toggle_likes.js')%>"></script>
  <script>
    $('.toggle-like-button').each(function(){
     let self = this;
